--- a/scss/medias-queries/_media-desktop.scss
+++ b/scss/medias-queries/_media-desktop.scss
@@ -1,268 +1,296 @@
-  /* dextop */
-  @media screen and (min-width: 1024px) {
-    header{
-
-        h1{
-            background-color: black;
-            color: aliceblue;
-            font-size: 40px;
-            width: 100%;
-            text-align: left;
-            display: flex;
-            align-items: center;
-            font: $title-font;
-            img{
-                width: 70px;
-                height: 50px;
-            }
-        }
-        .menu-principal{
-            img{
-                background-color: rgb(0, 0, 0);
-                @include sizes(50px, 50px);
-                position: relative;
-                left: 0px;
-                margin: 5px;
-            }
-        }
-        nav {
-            text-align: right;
-            background-color: black;
-            width: 100%;
-        a {
-            font-size: 15px;
-            text-decoration: none;
-            color: black;
-            margin-left: 5px;
-            margin-right: 5px;
-            font: $title-font;
-            text-align: right;
-          }
-        }
-        .link{
-            a{
-                background-color: rgb(197, 207, 201);
-                border-radius: 2px;
-                padding: 1px;
-                position: relative;
-                bottom: 5px;
-                margin: 5px;
-                :hover {
-                    background-color: rgb(252, 252, 252);
-                    color: rgb(0, 0, 0);
-                  }            
-            }
-        }
-    }
-    main{
-        .pag-inicio{
-            h2{
-                position: relative;
-                top: 0px;
-            }
-        }
-
-        .carousel-inner{
-        img {
-          @include sizes(550px, 400px);
-          margin: 20px;
-          padding: 10px;
-          position: relative;
-          left: 140px;
-          color: black;
-          background-color: white;
-          border-style: solid;
-          border-radius: 10px;
-        }  
+/* dextop */
+@media screen and (min-width: 1024px) {
+  header {
+    h1 {
+      background-color: black;
+      color: aliceblue;
+      font-size: 40px;
+      width: 100%;
+      text-align: left;
+      display: flex;
+      align-items: center;
+      font: $title-font;
+      img {
+        width: 70px;
+        height: 50px;
       }
-
-        p{
-            color: black;
-            font-size: 15px;
-            text-align: center;
-            margin: 30px;
-            margin-top: 30px;
-            font: $title-font;
+    }
+    .menu-principal {
+      img {
+        background-color: rgb(0, 0, 0);
+        @include sizes(50px, 50px);
+        position: relative;
+        left: 0px;
+        margin: 5px;
+        border-radius: 5px;
+      }
+    }
+    nav {
+      text-align: right;
+      background-color: black;
+      width: 100%;
+      a {
+        font-size: 15px;
+        text-decoration: none;
+        color: black;
+        margin-left: 5px;
+        margin-right: 5px;
+        font: $title-font;
+        text-align: right;
+      }
+    }
+    .link {
+      a {
+        background-color: rgb(197, 207, 201);
+        border-radius: 2px;
+        padding: 1px;
+        position: relative;
+        bottom: 5px;
+        margin: 5px;
+        :hover {
+          background-color: rgb(252, 252, 252);
+          color: rgb(0, 0, 0);
         }
-        h2{
-            text-align: center;
-            margin-top: 0px;
-            font: $title-font;
-            background-color: rgb(236, 236, 236);
-            font-size: 25px;
-        }
-        h3 {
-            text-align: center;
-            margin-top: 30px;
-            font: $title-font;
-            font-size: 20px;
-            text-shadow: 
-                0 0 5px #fff, /* Capa base blanca */
-                0 0 10px #fff, /* Aumento de tamaño y color */
-                0 0 20px #08f, /* Color principal del neón */
-          }
-          ul {
-            list-style-type: none;
-          }
-          li {
-            list-style-type: none;
-          }
-          .icons {
-            @include sizes(30px, 30px);
-            position: relative;
-            left: 0px;
-            margin: 0%;
-            padding: 0%;
-          }
-          iframe {
-            @include sizes(100px, 90px);
-            position: relative;
-            left: 0px;
-            top: 30px;
-            border-radius: 10%;
-          }
-          
-          .contacto-config{
-            p{
-                text-align: left;
-                margin-top: 20px;
-                margin-bottom: 10px;
-            }
-            input {
-                border-radius: 5px;
-                text-align: center;
-              }
-              label {
-                margin-left: 30px;
-                border-radius: 5px;
-              }
-              #opciones {
-                margin-left: 30px;
-                border-radius: 5px;
-              }
-              textarea {
-                margin-left: 30px;
-                border-radius: 5px;
-              }
-              @keyframes moverAvion {
+      }
+    }
+  }
+  main {
+    .pag-inicio {
+      h2 {
+        position: relative;
+        top: 0px;
+      }
+    }
 
-                100%{
-                  transform: translateX(900px);
-                }
-              }
-              
-              @keyframes moverPersonas {
-                0%{
-                  transform: rotate(-5deg);
-                }
-                50%{
-                  transform: rotate(10deg);
-                }
-                100%{
-                  transform: translateX(5deg);
-                }   
-              }
-              .icons-avion{
-                animation-name: moverAvion;
-                animation-duration: 10s;
-                animation-iteration-count: infinite;
-                animation-timing-function: linear;  
-              position:relative;
-              bottom: 600px;
-              left: 0px;
-              width: 150px;
-              height: 80px;
-              }
-              .icons-personas{
-                animation-name: moverPersonas;
-                animation-duration: 15s;
-                animation-iteration-count:infinite;
-              position: relative;
-              bottom: 350px;
-              left: 800px;
-              width: 400px;
-              height: 300px;
-            }
-          }
-    
-    .videos-conf{
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        margin: 10px;
+    .carousel-inner {
+      img {
+        @include sizes(550px, 400px);
+        margin: 20px;
         padding: 10px;
         position: relative;
-        bottom: 0px;
-        video{
-          @include sizes(490px, 380px);
-          position: relative;
-          bottom: 70px;
-          left: 5px;
-          right: 50px;
-          margin: 20px;
-          border-radius: 10px;
-        }
-        h3{
-            position: relative;
-            bottom: 10px;
-            left: 0px;
-            right: 50px;
-        }
-        li{
-          color: black;
-          background-color: white;
-          margin: 20px;
-          border-style: solid;
-          border-radius: 10px;
-          @include sizes(539px, 400px);
-          :hover {transform: scale(1.1);
-          transition: 1s;
-            }
-        }
+        left: 140px;
+        color: black;
+        background-color: white;
+        border-style: solid;
+        border-radius: 10px;
+      }
     }
-    .card{
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
+
+    p {
+      color: black;
+      font-size: 15px;
+      text-align: center;
+      margin: 30px;
+      margin-top: 30px;
+      font: $title-font;
+    }
+    h2 {
+      text-align: center;
+      margin-top: 0px;
+      font: $title-font;
+      background-color: rgb(236, 236, 236);
+      font-size: 25px;
+    }
+    h3 {
+      text-align: center;
+      margin-top: 30px;
+      font: $title-font;
+      font-size: 20px;
+      text-shadow: 0 0 5px #fff, /* Capa base blanca */ 0 0 10px #fff,
+        /* Aumento de tamaño y color */ 0 0 20px #08f; /* Color principal del neón */
+    }
+    ul {
+      list-style-type: none;
+    }
+    li {
+      list-style-type: none;
+    }
+    .icons {
+      @include sizes(30px, 30px);
+      position: relative;
+      left: 0px;
+      margin: 0%;
+      padding: 0%;
+    }
+    iframe {
+      @include sizes(100px, 90px);
+      position: relative;
+      left: 0px;
+      top: 30px;
+      border-radius: 10%;
+    }
+
+    .contacto-config {
+      p {
+        text-align: left;
+        margin-top: 20px;
+        margin-bottom: 10px;
+      }
+      input {
+        border-radius: 5px;
+        text-align: center;
+      }
+      label {
+        margin-left: 30px;
+        border-radius: 5px;
+      }
+      #opciones {
+        margin-left: 30px;
+        border-radius: 5px;
+      }
+      textarea {
+        margin-left: 30px;
+        border-radius: 5px;
+      }
+      @keyframes moverAvion {
+        100% {
+          transform: translateX(900px);
+        }
+      }
+
+      @keyframes moverPersonas {
+        0% {
+          transform: rotate(-5deg);
+        }
+        50% {
+          transform: rotate(10deg);
+        }
+        100% {
+          transform: translateX(5deg);
+        }
+      }
+      .icons-avion {
+        animation-name: moverAvion;
+        animation-duration: 10s;
+        animation-iteration-count: infinite;
+        animation-timing-function: linear;
+        position: relative;
+        bottom: 600px;
+        left: 0px;
+        width: 150px;
+        height: 80px;
+      }
+      .icons-personas {
+        animation-name: moverPersonas;
+        animation-duration: 15s;
+        animation-iteration-count: infinite;
+        position: relative;
+        bottom: 350px;
+        left: 800px;
+        width: 400px;
+        height: 300px;
+      }
+    }
+
+    .videos-conf {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      margin: 10px;
+      padding: 10px;
+      position: relative;
+      bottom: 0px;
+      video {
+        @include sizes(490px, 380px);
+        position: relative;
+        bottom: 70px;
+        left: 5px;
+        right: 50px;
+        margin: 20px;
+        border-radius: 10px;
+      }
+      h3 {
+        position: relative;
+        bottom: 10px;
+        left: 0px;
+        right: 50px;
+      }
+      li {
+        color: black;
+        background-color: white;
+        margin: 20px;
+        border-style: solid;
+        border-radius: 10px;
+        @include sizes(539px, 400px);
         :hover {
           transform: scale(1.1);
           transition: 1s;
         }
-    
-          p{
-            color: black;
-            background-color: white;
-            margin: 20px;
-            border-style: solid;
-            border-radius: 10px;
-            @include sizes(240px, 220px);
-            display: grid;
-            justify-content: center;
-            flex-wrap: wrap;
-            font-size: 20px;
-          }
-          .card-nosotros {
-            @include sizes(200px, 140px);
-            text-align: left;
-            position: relative;
-            bottom: 0px;
-            left: 0px;
-            margin: 20px;
-            padding: 10px;
-            border-radius: 20px;
-          }
-    
+      }
     }
+    .card {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      :hover {
+        transform: scale(1.1);
+        transition: 1s;
+      }
+
+      p {
+        color: black;
+        background-color: white;
+        margin: 20px;
+        border-style: solid;
+        border-radius: 10px;
+        @include sizes(240px, 220px);
+        display: grid;
+        justify-content: center;
+        flex-wrap: wrap;
+        font-size: 20px;
+      }
+      .card-nosotros {
+        @include sizes(199px, 152px);
+        text-align: left;
+        position: relative;
+        bottom: 0px;
+        left: 0px;
+        margin: 20px;
+        padding: 10px;
+        border-radius: 19px;
+      }
     }
-    footer {
-      text-align: center;
-      font-size: 16px;
-      font-family: Arial, sans-serif;
-      font-weight: bold;
-      background: linear-gradient(to right, #bdc3c7, #2c3e50);
-      -webkit-background-clip: text;
-      background-clip: text;
-      color: transparent;
-      position: static;
+    .mensaje {
+      .principal {
+        font-size: 50px;
+        font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+      }
+      .secundario {
+        font-size: 40px;
+        font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+      }
+      .terciario {
+        font-size: 30px;
+        font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+      }
+
+      img {
+        width: 200px;
+        height: 200px;
+        position: relative;
+        bottom: 15px;
+        left: 650px;
+        animation: rotacion 4s infinite linear;
+        @keyframes rotacion {
+          from {
+            transform: rotate(0deg);
+          }
+          to {
+            transform: rotate(360deg);
+          }
+        }
+      }
+    }
   }
+  footer {
+    text-align: center;
+    font-size: 16px;
+    font-family: Arial, sans-serif;
+    font-weight: bold;
+    background: linear-gradient(to right, #bdc3c7, #2c3e50);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    position: static;
   }
+}
